<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:paddingLeft="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459">

        <TextView
            android:id="@+id/txtFN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="15sp"
            android:text="@string/first_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtLN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15sp"
            android:text="@string/last_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:text="@string/birth_date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:text="@string/email_lbl"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/pass_lbl"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436">

        <EditText
            android:id="@+id/edit_Fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_Lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/eTxt_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="month"
                android:inputType="date" />

            <EditText
                android:id="@+id/eTxt_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="day"
                android:inputType="date" />

            <EditText
                android:id="@+id/eTxt_year"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:hint="year"
                android:inputType="date" />
        </LinearLayout>

        <EditText
            android:id="@+id/eTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_lbl"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/eTxtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_lbl"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id = "@+id/btn_CR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn__register"
        android:onClick="onClickCreate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>