<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:text="@string/login_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_width="wrap_content" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hint_Email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="@id/textViewLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintTop_toTopOf="@id/editTextPass"
            app:layout_constraintVertical_bias="0.362" />

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:paddingBottom="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintTop_toTopOf="@id/buttonLogin"
            tools:layout_editor_absoluteY="325dp"
            tools:layout_width="match_parent" />


        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClickLogIn"
            android:text="@string/btn_login"
            app:layout_constraintBottom_toBottomOf="@id/editTextPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>